<resources>
    <string name="app_name">SampleNote</string>
    <string name="logo_str">Bookkeeping</string>

    <string name="nav_home">首页</string>
    <string name="nav_bill">账单</string>
    <string name="nav_my">我的</string>
    <string name="month_amount">本月已花</string>
    <string name="month_shouru">本月收入</string>
    <string name="addbill">记一笔</string>
    <string name="desc">描述</string>
    <string name="type">类型</string>
    <string name="payType">付款方式</string>
    <string name="amount">金额</string>
    <string name="finish">完成</string>
    <string name="income">收入</string>
    <string name="expenses">支出</string>
    <string name="hint_desc">输入记账描述</string>
    <string name="hint_type">请选择消费类型</string>
    <string name="hint_amount">0.00</string>
    <string name="hint_paytype">请选择付款方式</string>
    <string name="add">新增</string>
    <string name="billType">账单类型</string>
    <string name="incomeType">收入来源</string>
    <string name="licai">理财</string>
    <string name="sz">收账</string>
    <string name="default_amount">0.00</string>
    <string name="alipay">支付宝</string>
    <string name="last_pay">最近消费</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入邮箱地址</string>
    <string name="prompt_phone">请输入手机号码</string>
    <string name="sure_phone">请输入正确的手机号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_regist">注册</string>
    <string name="action_register_hint">没有账号？立即注册！</string>
    <string name="error_invalid_email">请输入合法的邮箱地址</string>
    <string name="error_invalid_password">密码长度最低6位</string>
    <string name="error_confrim_password">两次密码不一致，请重新输入</string>
    <string name="error_regist">注册失败请稍后重试</string>
    <string name="error_incorrect_password">密码或者账号不正确</string>
    <string name="error_field_required">请先完成信息填写</string>
    <string name="str_not_account">没有账号？</string>
    <string name="str_forget_pwd">忘记密码？</string>
    <string name="user_existed">用户已经存在</string>
    <string name="regist_success">注册成功</string>
    <string name="hint_tologin">请登录!</string>
    <string name="basic">基本信息</string>
    <string name="deleteuser">注销用户</string>
    <string name="about">关于</string>
    <string name="appname">Bookkeeping</string>
</resources>
