<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_paytype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/alipay"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_paytype"
        app:layout_constraintLeft_toRightOf="@+id/tv_paytype"
        app:layout_constraintRight_toLeftOf="@+id/tv_amount"
        app:layout_constraintTop_toTopOf="@id/tv_paytype" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/twenty_dp"
        android:text="@string/default_amount"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_paytype"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_paytype" />
</androidx.constraintlayout.widget.ConstraintLayout>