<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="@dimen/twenty_dp">

        <ImageView
                android:id="@+id/iv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_head_blue_64dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_tologin"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <com.android.book.ui.widget.CustomTextView
            android:id="@+id/ctv_setting"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            app:bottomLineHeight="1dp"
            app:bottomLineShow="true"
            app:bottomcolor="@color/line"
            app:leftTvString="@string/setting"
            app:leftImgMarginleft="5dp"
            app:leftTvMarginleft="5dp"
            android:visibility="gone"
            app:leftImg="@drawable/ic_settings_blue_24dp"
            app:rightImg="@drawable/ic_arrow_right_black_24dp"
            app:leftTopTvColor="@color/colorBlack"
            app:leftTvSize="@dimen/fifteen_sp"
            />


    <com.android.book.ui.widget.CustomTextView
            android:id="@+id/ctv_basic"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            app:bottomLineHeight="1dp"
            app:bottomLineShow="true"
            app:bottomcolor="@color/line"
            app:leftTvString="@string/basic"
            app:leftImgMarginleft="5dp"
            app:leftTvMarginleft="5dp"
            app:leftImg="@drawable/ic_basic_blue_24dp"
            app:rightImg="@drawable/ic_arrow_right_black_24dp"
            app:leftTopTvColor="@color/colorBlack"
            app:leftTvSize="@dimen/fifteen_sp"
            />

    <com.android.book.ui.widget.CustomTextView
            android:id="@+id/ctv_logout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            app:bottomLineHeight="1dp"
            app:bottomLineShow="true"
            app:bottomcolor="@color/line"
            app:leftTvString="@string/logout"
            app:leftImgMarginleft="5dp"
            app:leftTvMarginleft="5dp"
            app:leftImg="@drawable/ic_exit_to_app_black_24dp"
            app:rightImg="@drawable/ic_arrow_right_black_24dp"
            app:leftTopTvColor="@color/colorBlack"
            app:leftTvSize="@dimen/fifteen_sp"
            />

    <com.android.book.ui.widget.CustomTextView
            android:id="@+id/ctv_delete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            app:bottomLineHeight="1dp"
            app:bottomLineShow="true"
            app:bottomcolor="@color/line"
            app:leftTvString="@string/deleteuser"
            app:leftImgMarginleft="5dp"
            app:leftTvMarginleft="5dp"
            app:leftImg="@drawable/ic_delete_blue_24dp"
            app:rightImg="@drawable/ic_arrow_right_black_24dp"
            app:leftTopTvColor="@color/colorBlack"
            app:leftTvSize="@dimen/fifteen_sp"
            />

    <com.android.book.ui.widget.CustomTextView
            android:id="@+id/ctv_about"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            app:bottomLineHeight="1dp"
            app:bottomLineShow="true"
            app:bottomcolor="@color/line"
            app:leftTvString="@string/about"
            app:leftImgMarginleft="5dp"
            app:leftTvMarginleft="5dp"
            app:leftImg="@drawable/ic_about_blue_24dp"
            app:rightImg="@drawable/ic_arrow_right_black_24dp"
            app:leftTopTvColor="@color/colorBlack"
            app:leftTvSize="@dimen/fifteen_sp"
            />
</LinearLayout>
